--- a/app/views/course/vacancies-locations.html
+++ b/app/views/course/vacancies-locations.html
@@ -38,7 +38,7 @@
 
       {% set table %}
         <div class="add-double-bottom-margin">
-          <table class="govuk-table">
+          <table class="govuk-table app-table--vertical-align-middle">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
                 <th class="govuk-table__header" scope="col">Training location</th>
