--- a/app/views/new-location/region-schools.html
+++ b/app/views/new-location/region-schools.html
@@ -43,7 +43,7 @@
       <div id="schools-added" {% if not data[code + '-area-schools'] %}style="display: none"{% endif %} class="govuk-!-margin-top-8 govuk-!-margin-bottom-9">
         <h2 class="govuk-heading-l">Schools and colleges</h2>
 
-        <table class="govuk-table" id="selected-schools-table">
+        <table class="govuk-table app-table--vertical-align-middle" id="selected-schools-table">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
               <th class="govuk-table__header">Name</th>
