--- a/app/views/preview.html
+++ b/app/views/preview.html
@@ -108,7 +108,7 @@
           {% else %}
             <p>The course fees for 2018/2019 are as follows:</p>
             <div class="body-text">
-              <table class="govuk-table">
+              <table class="govuk-table app-table--vertical-align-middle">
                 <tbody class="govuk-table__body">
                   <tr class="visually-hidden">
                     <th class="govuk-table__header" scope="col">Student type</th>
@@ -219,7 +219,7 @@
         <p>You’ll also need to choose a training location and give the relevant training location code.</p>
 
         <p>Available training locations:</p>
-        <table class="govuk-table">
+        <table class="govuk-table app-table--vertical-align-middle">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
               <th class="govuk-table__header" scope="col" style="width: 30%">Name</th>
