--- a/app/views/quiz.html
+++ b/app/views/quiz.html
@@ -11,7 +11,7 @@
     <li>what the status means</li>
   </ul>
 
-  <table class="govuk-table ucas-info-table">
+  <table class="govuk-table app-table--vertical-align-middle ucas-info-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
         <th class="govuk-table__header subject-col">Course</th>
