--- a/app/views/accredited-body/provider-courses.html
+++ b/app/views/accredited-body/provider-courses.html
@@ -17,7 +17,7 @@
 
   {% if data['accreditedCourses'].length > 0 %}
     <div class="body-text">
-      <table class="govuk-table ucas-info-table">
+      <table class="govuk-table app-table--vertical-align-middle ucas-info-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header subject-col" style="width: 380px">Course</th>
