--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -50,7 +50,7 @@
         </h3>
       {% endif %}
       <div class="body-text">
-        <table class="govuk-table ucas-info-table">
+        <table class="govuk-table app-table--vertical-align-middle ucas-info-table">
           <thead class="govuk-table__head">
             <tr class="govuk-table__row">
               <th class="govuk-table__header subject-col" style="width: 380px">Course</th>
