--- a/app/views/location.html
+++ b/app/views/location.html
@@ -97,7 +97,7 @@
     {{ editHtml | safe }}
   {% else %}
     {% set coursesHtml %}
-      <table class="govuk-table ucas-info-table">
+      <table class="govuk-table app-table--vertical-align-middle ucas-info-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header subject-col" style="width: 380px">Course</th>
