--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -60,7 +60,7 @@
         iconFallbackText: "Warning"
       }) }}
 
-      <table class="govuk-table">
+      <table class="govuk-table app-table--vertical-align-middle">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header" scope="col" style="width: 65%">Name</th>
