center align tables

--- a/app/views/accredited-body.html
+++ b/app/views/accredited-body.html
@@ -34,7 +34,7 @@
         {% endfor %}
       </ul>
 
-      <!-- <table class="govuk-table govuk-!-margin-top-8">
+      <!-- <table class="govuk-table govuk-!-margin-top-8 app-table--vertical-align-middle">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header">Training provider</th>
