fix `metadata` font & `application.scss` import

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -363,6 +363,7 @@ dl.aligned.course-part-tasks dd {
   .metadata {
     color: $govuk-secondary-text-colour;
     display: inline-block;
+    font-family: "GDS Transport", Cursive, sans-serif;
     margin-bottom: 5px;
   }
 }
