re-add tabs selected styling

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -310,6 +310,18 @@ dl.aligned.course-part-tasks dd {
     border: none;
     padding: 30px 0 0;
   }
+
+  .govuk-tabs__list-item--selected {
+    background-color: govuk-colour('white');
+    border-top: 5px solid govuk-colour('blue');
+    color: $govuk-text-colour;
+    padding-top: govuk-spacing(3) - 5;
+
+    text-decoration: none;
+    a {
+      outline-offset: -3px;
+    }
+  }
 }
 
 .timeline {
