--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -304,6 +304,7 @@ dl.aligned.course-part-tasks dd {
     color: $govuk-link-colour;
     font-weight: bold;
     text-align: left;
+    text-decoration: none;
   }
 
   .govuk-tabs__panel {
@@ -312,15 +313,10 @@ dl.aligned.course-part-tasks dd {
   }
 
   .govuk-tabs__list-item--selected {
-    background-color: govuk-colour('white');
-    border-top: 5px solid govuk-colour('blue');
+    background-color: govuk-colour("white");
+    border-top: govuk-spacing(1) solid $govuk-link-colour;
     color: $govuk-text-colour;
-    padding-top: govuk-spacing(3) - 5;
-
-    text-decoration: none;
-    a {
-      outline-offset: -3px;
-    }
+    padding-top: govuk-spacing(2);
   }
 }
 
