--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -497,7 +497,7 @@
 
 {% macro textarea(id, label, rows, helpText = false, maxWords = 50, errors = false) %}
   {% set e = error(id, errors) %}
-  <div class="govuk-character-count" data-module="character-count" data-maxwords="{{ maxWords }}">
+  <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="{{ maxWords }}">
     <div class="govuk-form-group{% if e %} govuk-form-group--error{% endif %}">
       <label class="govuk-label govuk-label--s" for="{{id}}">{{label}}</label>
       {% if helpText %}
@@ -510,7 +510,7 @@
       {% endif %}
       <div class="textarea-wrapper">
         <textarea
-          class="govuk-textarea js-character-count"
+          class="govuk-textarea govuk-js-character-count"
           rows="{{ rows }}"
           name="{{ id }}"
           id="{{ id }}">{{ value(id) }}</textarea>
