update `data-module='error-summary'` to `data-module='govuk-error-summary`

--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -109,7 +109,7 @@
       </h3>
       <div class="js-what-copied"></div>
     </div>
-    <div class="error-summary error-summary-small js-error-copy" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" style="display: none">
+    <div class="error-summary error-summary-small js-error-copy" role="alert" aria-labelledby="error-summary-heading-example-1" tabindex="-1" data-module="govuk-error-summary" style="display: none">
       <h3 class="govuk-heading-s error-summary-heading" id="error-summary-heading-example-1">
         There was no content to copy.
       </h3>
