--- a/app/views/macros/macros.njk
+++ b/app/views/macros/macros.njk
@@ -364,7 +364,7 @@
       </span>
     {% endif %}
 
-    <div class="govuk-radios govuk-radios--conditional" data-module="radios">
+    <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
       {% for field in fields %}
         {% set i = loop.index + index %}
         {% if field.or %}
