--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -379,3 +379,9 @@ dl.aligned.course-part-tasks dd {
   background-color: $govuk-error-colour;
   border-color: $govuk-error-colour;
 }
+
+// Required since govuk-frontend 3.0.0
+.app-table--vertical-align-middle .govuk-table__header,
+.app-table--vertical-align-middle .govuk-table__cell {
+  vertical-align: middle;
+}
