fix `metadata` class font rendering

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -256,7 +256,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">Published</h4>
-                  <span class="metadata">7:03pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">7:03pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -265,7 +265,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">Rolled over from previous cycle</h4>
-                  <span class="metadata">10:25pm by Department for Education</span>
+                  <span class="govuk-body-s metadata">10:25pm by Department for Education</span>
                 </li>
               </ul>
             </li>
@@ -283,7 +283,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-l">Published</h4>
-                  <span class="metadata">7:03pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">7:03pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -292,15 +292,15 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">About this course updated</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
                 <li class="event">
                   <h4 class="govuk-heading-s">Course length and fees updated</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
                 <li class="event">
                   <h4 class="govuk-heading-s">Requirements and eligibility updated</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -309,7 +309,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">Vacancies edited, applications reopened</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -318,7 +318,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">No vacancies, applications closed</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -327,7 +327,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">Vacancies edited</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -336,7 +336,7 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-l">First published</h4>
-                  <span class="metadata">7:03pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">7:03pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
@@ -345,15 +345,15 @@
               <ul class="events">
                 <li class="event">
                   <h4 class="govuk-heading-s">About this course updated</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
                 <li class="event">
                   <h4 class="govuk-heading-s">Course length and fees updated</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
                 <li class="event">
                   <h4 class="govuk-heading-s">Requirements and eligibility updated</h4>
-                  <span class="metadata">10:25pm by Jane Doe</span>
+                  <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                 </li>
               </ul>
             </li>
