--- a/app/views/location.html
+++ b/app/views/location.html
@@ -126,7 +126,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-s">Published</h4>
-                    <span class="metadata">7:03pm by Jane Doe</span>
+                    <span class="govuk-body-s metadata">7:03pm by Jane Doe</span>
                   </li>
                 </ul>
               </li>
@@ -135,7 +135,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-s">Rolled over from previous cycle</h4>
-                    <span class="metadata">10:25pm by Department for Education</span>
+                    <span class="govuk-body-s metadata">10:25pm by Department for Education</span>
                   </li>
                 </ul>
               </li>
@@ -153,7 +153,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-l">Renamed to Main Site</h4>
-                    <span class="metadata">10:25pm by Jane Doe</span>
+                    <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                   </li>
                 </ul>
               </li>
@@ -162,7 +162,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-s">Removed from 8 courses</h4>
-                    <span class="metadata">10:25pm by Jane Doe</span>
+                    <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                   </li>
                 </ul>
               </li>
@@ -171,7 +171,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-s">Added to 7 courses</h4>
-                    <span class="metadata">10:25pm by Jane Doe</span>
+                    <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                   </li>
                 </ul>
               </li>
@@ -180,7 +180,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-s">Added to course Primary (X100)</h4>
-                    <span class="metadata">10:25pm by Jane Doe</span>
+                    <span class="govuk-body-s metadata">10:25pm by Jane Doe</span>
                   </li>
                 </ul>
               </li>
@@ -189,7 +189,7 @@
                 <ul class="events">
                   <li class="event">
                     <h4 class="govuk-heading-l">Pool Hayes School added</h4>
-                    <span class="metadata">7:03pm by Jane Doe</span>
+                    <span class="govuk-body-s metadata">7:03pm by Jane Doe</span>
                   </li>
                 </ul>
               </li>
