--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -34,6 +34,20 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h2 class="govuk-heading-l">New cycle (2020 – 2021)</h2>
+      <p>Before 1 October you must:</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>publish your organisation information</li>
+        <li>publish the courses you are running this year</li>
+        <li>remove any mention of the skills test requirement</li>
+      </ul>
+
+      <p>Courses you publish will be listed on <a href="https://find-postgraduate-teacher-training.education.gov.uk/">Find postgraduate teacher training</a> from 1 October. Applications will open on 8 October.</p>
+
+      <p>Candidates can only apply to published courses.</p>
+
+      <hr class="govuk-section-break govuk-section-break--l">
+
       {% if data['rolled-over'] %}
         {% if data['next-cycle'] %}
           <p class="govuk-body-l">Prepare your courses and locations for the next cycle. All your courses, locations and details have been copied from the current cycle.</p>
@@ -60,18 +74,6 @@
 
       <div class="govuk-!-margin-bottom-8">
         <h2 class="govuk-heading-m">
-          <a href="/locations">Locations</a>
-        </h2>
-
-        <p>Use this section to:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>manage the locations that candidates select when applying</li>
-          <li>edit location names and addresses</li>
-          <li>add locations</li>
-        </ul>
-      </div>
-      <div class="govuk-!-margin-bottom-8">
-        <h2 class="govuk-heading-m">
           <a href="/courses">Courses</a>
         </h2>
 
@@ -88,7 +90,7 @@
       </div>
 
       {% if data['is-accredited-body'] and not (data['rolled-over'] and data['next-cycle']) %}
-        <div class="govuk-!-margin-bottom-8">
+        <!-- <div class="govuk-!-margin-bottom-8">
           <h2 class="govuk-heading-m">
             <a href="/accredited-body">Courses as an accredited body</a>
           </h2>
@@ -98,20 +100,50 @@
             <li>see who lists you as their accredited body</li>
             <li>see which courses you’re the accredited body for</li>
           </ul>
-        </div>
+        </div> -->
       {% endif %}
 
-      {% if not data['rolled-over'] %}
-        {% include "includes/_access-and-preferences.html" %}
-      {% endif %}
+      <div class="govuk-!-margin-bottom-8">
+        <h2 class="govuk-heading-m">
+          <a href="/locations">Locations</a>
+        </h2>
+
+        <p>Use this section to:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>manage the locations that candidates select when applying</li>
+          <li>edit location names and addresses</li>
+          <li>add locations</li>
+        </ul>
+      </div>
+
+      <h2 class="govuk-heading-l">Previous cycles</h2>
+
+      <h2 class="govuk-heading-m">
+        <a href="/locations">2019 – 2020</a>
+      </h2>
+
+      <p>View your courses and locations from the 2019 – 2020 recruitment cycle.</p>
     </div>
     <div class="govuk-grid-column-one-third">
       {% if not data['rolled-over'] %}
       <div class="status-box">
-        <h2 class="govuk-heading-m">New features in Publish</h2>
-        <p class="govuk-body"><a href="/new-features">View a list of new features</a> we plan to introduce in the coming months.</p>
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <a href="/request-access">Request access</a>
+        </h2>
+        <p>Request a DfE Sign-in account for others who manage your courses.</p>
 
-        <h2 class="govuk-heading-m">Support and guidance</h2>
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <a href="/ucas/apply-preferences">UCAS contacts</a>
+        </h2>
+        <p>Update or request UCAS contact details.</p>
+
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <a href="/new-features">New features</a>
+        </h2>
+        <p class="govuk-body">View a list of new features we’re working on.</p>
+
+        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+        <h2 class="govuk-heading-s">Support and guidance</h2>
         <p class="govuk-body">If you have a question, or you’ve had a problem using Publish, you can email:</p>
         <p class="govuk-body govuk-!-margin-bottom-0">
           <a class="govuk-link" href="mailto:becomingateacher@digital.education.gov.uk?subject=Support%20and%20guidance">becomingateacher<wbr>@digital.education.gov.uk</a>
