Experimenting with new features but mainly to test the workflow to heroku

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -48,6 +48,9 @@
       {
         href: "#",
         text: "Sign out (Jane Doe)"
+      },{
+        href: "#",
+        text: "Manage notifications"
       }
     ]
   }) }}
