--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -106,6 +106,10 @@
       {% if not data['rolled-over'] %}
       <div class="status-box">
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+          <a href="/">Notifications</a>
+        </h2>
+        <p>Manage your notification settings.</p>
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/request-access">Request access</a>
         </h2>
         <p>Request a DfE Sign-in account for others who manage your courses.</p>
