Manage notifications wip added

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -48,9 +48,10 @@
       {
         href: "#",
         text: "Sign out (Jane Doe)"
-      },{
-        href: "#",
-        text: "Manage notifications"
+      },
+      {
+        href: "/notifications",
+        text: "Notifications"
       }
     ]
   }) }}
