--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -38,7 +38,8 @@
 				</tr>
 				</tbody>
 			</table> #}
-			<h2 class="govuk-heading-m govuk-!-margin-top-8">
+			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+			<h2 class="govuk-heading-m">
 				Updates to courses as an accredited body
 			</h2>
 			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
