new pages added

--- a/app/views/notifications-enabled-2.html
+++ b/app/views/notifications-enabled-2.html
@@ -68,9 +68,23 @@
 							<a href="/notifications">Remove</a>
 						</td>
 					</tr>
+					<tr class="govuk-table__row">
+						<td class="govuk-table__cell">
+							{{ data['system-notify-email-2'] }}
+						</td>
+						<td class="govuk-table__cell">
+							{{ data['frequency-2'] }}
+						</td>
+						<td class="govuk-table__cell">
+							<a href="/manage-notifications-2">Change</a>
+						</td>
+						<td class="govuk-table__cell">
+							<a href="/notifications-enabled">Remove</a>
+						</td>
+					</tr>
 				</tbody>
 			</table>
-			<a href="/manage-notifications-2" class="govuk-body">Add another recipient</a>
+			<a href="#" class="govuk-body">Add another recipient</a>
 		</div>
 	</div>
 </div>
