--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -10,7 +10,7 @@
 			<h1 class="govuk-heading-xl">
 				{{ title }}
 			</h1>
-			<h2 class="govuk-heading-m">
+			<h2 class="govuk-heading-l">
 				System notifications
 			</h2>
 			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
@@ -39,10 +39,10 @@
 				</tbody>
 			</table> #}
 			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-			<h2 class="govuk-heading-m">
-				Updates to courses as an accredited body
+			<h2 class="govuk-heading-l">
+				Changes to courses as an accredited body
 			</h2>
-			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
+			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body of.</p>
 			<a href="/manage-notifications" class="govuk-body">Enable this notification</a>
 			{# <table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
