--- a/app/views/notifications-enabled-2.html
+++ b/app/views/notifications-enabled-2.html
@@ -14,7 +14,7 @@
 				System notifications
 			</h2>
 			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
-			<a href="/manage-notifications" class="govuk-body">Enable this notification</a>
+			<a href="/manage-notifications" class="govuk-body">Turn on this notification</a>
 			{# <table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
@@ -42,8 +42,8 @@
 			<h2 class="govuk-heading-l">
 				Changes to courses as an accredited body
 			</h2>
-			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body of.</p>
-			{# <a href="/manage-notifications" class="govuk-body">Enable this notification</a> #}
+			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
+			{# <a href="/manage-notifications" class="govuk-body">Turn on this notification</a> #}
 			<table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
