--- a/app/views/notifications-enabled-2.html
+++ b/app/views/notifications-enabled-2.html
@@ -10,11 +10,7 @@
 			<h1 class="govuk-heading-xl">
 				{{ title }}
 			</h1>
-			<h2 class="govuk-heading-l">
-				System notifications
-			</h2>
-			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
-			<a href="/manage-notifications" class="govuk-body">Turn on this notification</a>
+			
 			{# <table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
@@ -38,12 +34,11 @@
 				</tr>
 				</tbody>
 			</table> #}
-			<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 			<h2 class="govuk-heading-l">
 				Changes to courses as an accredited body
 			</h2>
 			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
-			{# <a href="/manage-notifications" class="govuk-body">Turn on this notification</a> #}
+			{# <a href="/manage-notifications" class="govuk-body">Subscribe to this notification</a> #}
 			<table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
@@ -85,6 +80,12 @@
 				</tbody>
 			</table>
 			<a href="#" class="govuk-body">Add another recipient</a>
+			<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+			<h2 class="govuk-heading-l">
+				System notifications
+			</h2>
+			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
+			<a href="/manage-notifications" class="govuk-body">Subscribe to this notification</a>
 		</div>
 	</div>
 </div>
