--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -11,10 +11,10 @@
 				{{ title }}
 			</h1>
 			<h2 class="govuk-heading-l">
-				System notifications
+				Changes to courses as an accredited body
 			</h2>
-			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
-			<a href="#" class="govuk-body">Turn on this notification</a>
+			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
+			<a href="/manage-notifications" class="govuk-body">Subscribe to this notification</a>
 			{# <table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
@@ -40,10 +40,10 @@
 			</table> #}
 			<hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 			<h2 class="govuk-heading-l">
-				Changes to courses as an accredited body
+				System notifications
 			</h2>
-			<p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
-			<a href="/manage-notifications" class="govuk-body">Turn on this notification</a>
+			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
+			<a href="#" class="govuk-body">Subscribe to this notification</a>
 			{# <table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
 					<tr class="govuk-table__row">
