--- a/app/views/manage-notifications.html
+++ b/app/views/manage-notifications.html
@@ -3,56 +3,67 @@
 {% block pageTitle %}{{ title }}{% endblock %}
 {% block beforeContent %}
 {{ govukBackLink({
-  text: "Notifications",
-  href: "/notifications"
+text: "Notifications",
+href: "/notifications"
 }) }}
 {% endblock %}
 {% block content %}
 <div class="govuk-grid-row">
-	<div class="govuk-grid-column-two-thirds">
-		<form action="/notifications-enabled" method="post" class="form">
-		<fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-          <h1 class="govuk-fieldset__heading">
-            <span class="govuk-caption-xl">Manage notifications</span>
-            Updates to courses as an accredited body
-          </h1>
-        </legend>
-		<h2 class="govuk-heading-l govuk-!-margin-top-4">
-			Who are the notifications sent to?
-		</h2>
-		<label class="govuk-label" for="event-name">
-			Email address
-		</label>
-        <input class="govuk-input govuk-input govuk-input--width-20" id="system-notify-email" name="system-notify-email" value="{{ data['system-notify-email'] }}" type="text">
-		<h2 class="govuk-heading-l govuk-!-margin-top-6">
-			How often should notifications be delivered? 
-		</h2>
-		<div class="govuk-radios govuk-!-margin-top-6 govuk-!-margin-bottom-8">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="frequency-1" name="frequency" type="radio" value="As it happens" {{ checked("frequency", "As it happens") }}>
-            <label class="govuk-label govuk-radios__label" for="frequency-1">
-            	As it happens
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="frequency-2" name="frequency" type="radio" value="Daily" {{ checked("frequency", "Daily") }}>
-            <label class="govuk-label govuk-radios__label" for="frequency-2">
-				Daily
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="frequency-3" name="frequency" type="radio" value="Weekly" {{ checked("frequency", "Weekly") }}>
-            <label class="govuk-label govuk-radios__label" for="frequency-3">
-				Weekly
-            </label>
-          </div>
-        </div>
-		{{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to receive emails from Publish teacher training courses ' }], false) }}
-		<input type="submit" class="govuk-button" value="Save">
-		<p>
-          <a href="#">Cancel changes</a>
-        </p>
-	</div>
+  <div class="govuk-grid-column-two-thirds">
+    <form action="/notifications-enabled" method="post" class="form">
+    <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
+        <span class="govuk-caption-xl">Manage notifications</span>
+        Updates to courses as an accredited body
+      </h1>
+    </legend>
+    </legend>
+    {% set fields = [
+      {
+        name: 'Get an email notification about changes to courses you acreddit'
+      },
+      {
+        name: 'Don’t get an email notification'
+      }
+    ]
+    %}
+    {{ macros.radioGroup('ab-notifications', fields) }}
+    <h2 class="govuk-heading-l govuk-!-margin-top-4">
+      Who are the notifications sent to?
+    </h2>
+    <label class="govuk-label" for="event-name">
+    Email address
+    </label>
+    <input class="govuk-input govuk-input govuk-input--width-20" id="system-notify-email" name="system-notify-email" value="{{ data['system-notify-email'] }}" type="text">
+    <h2 class="govuk-heading-l govuk-!-margin-top-6">
+      How often should the notifications be sent? 
+    </h2>
+    <div class="govuk-radios govuk-!-margin-top-6 govuk-!-margin-bottom-8">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="frequency-1" name="frequency" type="radio" value="As it happens" {{ checked("frequency", "As it happens") }}>
+        <label class="govuk-label govuk-radios__label" for="frequency-1">
+        As it happens
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="frequency-2" name="frequency" type="radio" value="Daily" {{ checked("frequency", "Daily") }}>
+        <label class="govuk-label govuk-radios__label" for="frequency-2">
+        Daily (Recommended)
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="frequency-3" name="frequency" type="radio" value="Weekly" {{ checked("frequency", "Weekly") }}>
+        <label class="govuk-label govuk-radios__label" for="frequency-3">
+        Weekly
+        </label>
+      </div>
+    </div>
+    {{ macros.checkboxGroup('agree-to-share', [{ name: 'I give permission to receive emails from Publish teacher training courses ' }], false) }}
+    <input type="submit" class="govuk-button add-double-bottom-margin" value="Save">
+    <p>
+      <a href="#">Cancel changes</a>
+    </p>
+  </div>
 </div>
 {% endblock %}
