--- a/app/views/manage-notifications.html
+++ b/app/views/manage-notifications.html
@@ -21,10 +21,10 @@ href: "/notifications"
     </legend>
     {% set fields = [
       {
-        name: 'Get an email notification about changes to courses you acreddit'
+        name: 'Get email notifications about changes to courses'
       },
       {
-        name: 'Don’t get an email notification'
+        name: 'Don’t get email notifications'
       }
     ]
     %}
