--- a/app/views/manage-notifications.html
+++ b/app/views/manage-notifications.html
@@ -15,7 +15,7 @@ href: "/notifications"
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-8">
         <span class="govuk-caption-xl">Manage notifications</span>
-        Updates to courses as an accredited body
+        Changes to courses as an accredited body
       </h1>
     </legend>
     </legend>
@@ -43,13 +43,13 @@ href: "/notifications"
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="frequency-1" name="frequency" type="radio" value="As it happens" {{ checked("frequency", "As it happens") }}>
         <label class="govuk-label govuk-radios__label" for="frequency-1">
-        As it happens
+        As it happens (Recommended)
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="frequency-2" name="frequency" type="radio" value="Daily" {{ checked("frequency", "Daily") }}>
         <label class="govuk-label govuk-radios__label" for="frequency-2">
-        Daily (Recommended)
+        Daily
         </label>
       </div>
       <div class="govuk-radios__item">
