add link in sidebar

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -105,10 +105,10 @@
     <div class="govuk-grid-column-one-third">
       {% if not data['rolled-over'] %}
       <div class="status-box">
-        {# <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
+        <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/">Notifications</a>
         </h2>
-        <p>Manage your notification settings.</p> #}
+        <p>Manage your notification settings.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
           <a href="/request-access">Request access</a>
         </h2>
