--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -106,7 +106,7 @@
       {% if not data['rolled-over'] %}
       <div class="status-box">
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
-          <a href="/">Notifications</a>
+          <a href="/notifications">Notifications</a>
         </h2>
         <p>Manage your notification settings.</p>
         <h2 class="govuk-heading-s govuk-!-margin-bottom-2">
