--- a/app/views/accredited-body.html
+++ b/app/views/accredited-body.html
@@ -26,7 +26,7 @@
             <h3 class="govuk-heading-m">
               <a href="/accredited-body/{{ provider.code }}">{{ provider.name }} ({{ provider.code }})</a>
               <span class="govuk-body govuk-!-font-weight-regular govuk-!-display-block">
-                Lead school: Example School Name<br />
+                {# Lead school: Example School Name<br /> #}
                 {{ provider.count }}&nbsp;course{% if not (provider.count == 1) %}s{% endif %}
               </span>
             </h3>
