--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -42,7 +42,7 @@
 			<h2 class="govuk-heading-l">
 				System notifications
 			</h2>
-			<p>You'll receieve notifications related to your account and the Publish teacher training courses service.</p>
+			<p>You'll receive notifications related to your account and the Publish teacher training courses service.</p>
 			<a href="#" class="govuk-body">Subscribe to this notification</a>
 			{# <table class="govuk-table ucas-info-table">
 				<thead class="govuk-table__head">
