added notifications here too

--- a/app/views/accredited-body.html
+++ b/app/views/accredited-body.html
@@ -55,9 +55,13 @@
     </div>
     <div class="govuk-grid-column-one-third">
       <div class="status-box">
+        <h2 class="govuk-heading-m govuk-!-margin-top-2">
+          <a href="/notifications">Notifications</a>
+        </h2>
+        <p>Manage your notification settings.</p>
         <h2 class="govuk-heading-m">Download</h2>
         <p>Export all the courses you’re the accredited body for.</p>
-        <p class="govuk-!-margin-bottom-0">
+        <p class="">
           <a href="#">Download as a CSV file</a>
         </p>
       </div>
