--- a/app/views/notifications-enabled.html
+++ b/app/views/notifications-enabled.html
@@ -12,12 +12,20 @@
       <h2 class="govuk-heading-l">
         Changes to courses as an accredited body
       </h2>
-      <p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
+      <p>You'll receive a notification if:</p>
+			<ul class="govuk-list govuk-list--bullet">
+				<li>A course has a basic detail change</li>
+				<li>A course is created</li>
+				<li>A course is published</li>
+				<li>A course is withdrawn</li>
+				<li>There are no more vacancies in a course</li>
+				<li>A course’s accredited body has changed</li>
+			</ul>
       {# <a href="/manage-notifications" class="govuk-body">Subscribe to this notification</a> #}
       <table class="govuk-table ucas-info-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th class="govuk-table__header subject-col" style="width: 60%">Who are the notifications sent to?</th>
+            <th class="govuk-table__header subject-col" style="width: 55%">Who are the notifications sent to?</th>
             <th class="govuk-table__header status-col" style="width: 25%">Freqency</th>
             <th class="govuk-table__header status-col"></th>
             {# <th class="govuk-table__header status-col"></th> #}
