--- a/app/views/notifications-enabled-2.html
+++ b/app/views/notifications-enabled-2.html
@@ -12,7 +12,15 @@
       <h2 class="govuk-heading-l">
         Changes to courses as an accredited body
       </h2>
-      <p>You'll receive a notification if there’s been a change to a course that you’re the accredited body for.</p>
+      <p>You'll receive a notification:</p>
+			<ul class="govuk-list govuk-list--bullet">
+				<li>if there any changes to a course’s basic details</li>
+				<li>when a course is created</li>
+				<li>when a course is published</li>
+				<li>when a course is withdrawn</li>
+				<li>if all vacancies are filled for a course</li>
+				<li>if a course’s accredited body changes</li>
+			</ul>
       {# <a href="/manage-notifications" class="govuk-body">Subscribe to this notification</a> #}
       <table class="govuk-table ucas-info-table">
         <thead class="govuk-table__head">
