--- a/app/views/notifications-enabled.html
+++ b/app/views/notifications-enabled.html
@@ -12,14 +12,14 @@
       <h2 class="govuk-heading-l">
         Changes to courses as an accredited body
       </h2>
-      <p>You'll receive a notification if:</p>
+      <p>You'll receive a notification:</p>
 			<ul class="govuk-list govuk-list--bullet">
-				<li>A course has a basic detail change</li>
-				<li>A course is created</li>
-				<li>A course is published</li>
-				<li>A course is withdrawn</li>
-				<li>There are no more vacancies in a course</li>
-				<li>A course’s accredited body has changed</li>
+				<li>if there any changes to a course’s basic details</li>
+				<li>when a course is created</li>
+				<li>when a course is published</li>
+				<li>when a course is withdrawn</li>
+				<li>if all vacancies are filled for a course</li>
+				<li>if a course’s accredited body changes</li>
 			</ul>
       {# <a href="/manage-notifications" class="govuk-body">Subscribe to this notification</a> #}
       <table class="govuk-table ucas-info-table">
