--- a/app/views/notifications.html
+++ b/app/views/notifications.html
@@ -15,7 +15,7 @@
 			</h2>
 			<p>You'll receive notifications for courses that you're the accredited body for. You'll receive a notification:</p>
 			<ul class="govuk-list govuk-list--bullet">
-				<li>if there any changes to a course’s basic details</li>
+				<li>if there are any changes to a course’s basic details</li>
 				<li>when a course is created</li>
 				<li>when a course is published</li>
 				<li>when a course is withdrawn</li>
