--- a/app/views/notifications-enabled.html
+++ b/app/views/notifications-enabled.html
@@ -12,7 +12,8 @@
       <h2 class="govuk-heading-l">
         Changes to courses as an accredited body
       </h2>
-      <p>You'll receive notifications for courses that you're the accredited body for. You'll receive a notification:</p>
+      <p>You'll receive notifications for courses that you're the accredited body for.</p> 
+			<p>You'll receive a notification:</p>
 			<ul class="govuk-list govuk-list--bullet">
 				<li>if there are any changes to a course’s basic details</li>
 				<li>when a course is created</li>
